--- a/example-app/public/assets/css/style.css
+++ b/example-app/public/assets/css/style.css
@@ -72,14 +72,20 @@ body {
 section.graph{
     width: 33%;
     height: 100%;
+    padding-right: 20px;
+}
+
+/* Graph */
+
+section.graph p{
+    text-align: center;
 }
 
 section.list{
     width: 67%;
     height: 100%;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
-
 
 .graph-header h2{
     display: inline-block;
@@ -92,4 +98,66 @@ section.list{
 
 .graph-header-subtitle{
     margin-top: 10px;
+}
+
+.graph-placeholder{
+    background-color: #ccc;
+    width: 300px;
+    height: 300px;
+    margin: 0 auto ;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* List */
+
+.list-header{
+    display: flex;
+}
+
+.list-header-select{
+
+}
+
+.task-list{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.task{
+    padding: 0 20px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+hr {
+    border-color: rgb(250, 250, 250) !important;
+}
+.task:hover{
+    background-color: var(--background-light);
+}
+
+.priority{
+    display: flex;
+    align-items: center;
+}
+
+.title{
+    display: flex;
+    align-items: center;
+}
+.sphere{
+    border-radius: 100%;
+    background-color: red;
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+}
+
+.title label{
+    padding: 10px;
 }
