componetisando tasks e inicio do edit

--- a/example-app/public/assets/css/style.css
+++ b/example-app/public/assets/css/style.css
@@ -22,7 +22,12 @@ body {
 /* Elements */
 
 .btn{
-    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    margin: 0 10px;
+    padding: 15px 0;
     border-radius: 10px;
     text-decoration: none;
 }
@@ -142,11 +147,13 @@ hr {
 }
 
 .priority{
+    width: 200px;
     display: flex;
     align-items: center;
 }
 
 .title{
+    width: 300px;
     display: flex;
     align-items: center;
 }
@@ -160,4 +167,32 @@ hr {
 
 .title label{
     padding: 10px;
+}
+
+.actions{
+    display: flex;
+}
+
+.actions a{
+    margin: 0 10px;
+}
+
+/* Modal */
+
+.modal-header{
+    justify-content: center;
+}
+
+.modal-title{
+    margin: 0 auto !important;
+    padding-left: 40px;
+}
+
+.btn-close{
+    margin: 0 !important;
+    float: right;
+}
+
+.modal-footer{
+    justify-content: center !important;
 }
